# Interactive-CV-Pipeline

./: .dockerignore  Dockerfile  README.md  conf.py  config.toml  docker-compose.yml  progress.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
src/: main.py
src/layer/: contours.py  edit_image.py  equalize_hist.py  gray.py  layer.py  morphology.py  threshold.py  upload_image.py
src/layer/convolve/: box.py  convolve.py  gaussian.py  median.py
src/layer/edge/: canny.py  laplace.py  prewitt.py
src/layer_factory/: layer_factory.py
src/sequential/: sequential.py
src/utils/: helpers.py
tests/: helpers.py  test_contours.py  test_return_type.py  test_sequential.py  test_set_image.py  test_ui.py
